--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-#a958f5e500fb5f0ff18426ec0b460089
+
 dependencies:
   flutter:
     sdk: flutter
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
